--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "displayName": "hy-compilers-language-support",
   "description": "Provides basic syntax highlighting for the language implemented in HY Compilers 2024 course",
   "author": "Veikko Suhonen",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Veikkosuhonen/hy-compilers-language-support"
+  },
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.86.0"
