Try adding syntax highlight for types

--- a/language-configuration.json
+++ b/language-configuration.json
@@ -20,4 +20,8 @@
         ["{", "}"],
         ["(", ")"],
     ],
+    "indentationRules": {
+        "increaseIndentPattern": "^.*\\{[^}\"']*$|^.*\\([^\\)\"']*$",
+        "decreaseIndentPattern": "^\\s*(\\s*\\/[*].*[*]\\/\\s*)*[})]"
+    },
 }
